Corrige /w/ nas páginas estáticas

--- a/src/pages/mapa.html
+++ b/src/pages/mapa.html
@@ -7,7 +7,7 @@ classes:
 override:header: 
 header:
   actions:
-    - href: '/casa/'
+    - href: '/w/'
       label: "Ver lista"
       btn_class: "btn-primary btn-lg px-5 py-3 mx-2"
     - href: '/cronologia/'
